@@ -83,8 +83,7 @@ the pattern /^(a(b)?)+$/ in Perl leaves $2 unset, but in PCRE it is set to "b".
 .P
 11. PCRE does support Perl 5.10's backtracking verbs (*ACCEPT), (*FAIL), (*F),
 (*COMMIT), (*PRUNE), (*SKIP), and (*THEN), but only in the forms without an
-argument. PCRE does not support (*MARK). If (*ACCEPT) is within capturing
-parentheses, PCRE does not set that capture group; this is different to Perl.
+argument. PCRE does not support (*MARK).
 .P
 12. PCRE provides some extensions to the Perl regular expression facilities.
 Perl 5.10 will include new features that are not in earlier versions, some of
@@ -143,6 +142,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 11 September 2009
+Last updated: 15 September 2009
 Copyright (c) 1997-2009 University of Cambridge.
 .fi
